--- a/style/style.css
+++ b/style/style.css
@@ -8,10 +8,7 @@ ol, ul {
 	list-style: none;
 }
 :root{
-  --brand-color: #EF5F4C;
-  --background-color: #FFFFFF;
-  --surface-color:  #F5F5F5;
-  --skeleton-color: #D9D9D9;
-  --text-color-primary:#313131;
-  --text-color-secondary:#6C6C6C ;
+  --color01--: #EF5F4C;
+  --color02--:#313131;
+  --color03--:#6C6C6C;
 }
